--- a/assets/css/cs_center.scss
+++ b/assets/css/cs_center.scss
@@ -545,6 +545,16 @@
             padding-bottom: 20px;
             border-bottom: 2px solid $rc;
             .news-list {
+                @media (max-width: $lg - 1) {
+                    text-align: center;
+                    ul {
+                        display: inline-block;
+                        margin-bottom: 10px;
+                        li {
+
+                        }
+                    }
+                }
                 ul {
                     overflow: hidden;
                     li {
